--- a/index.html
+++ b/index.html
@@ -1,24 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html> 
   <head>
-    <title>方方的个人简历</title>
-    <style>
-    </style>
+    <title>王童孟的个人简历</title>
+    <link rel="stylesheet" href="./a.css">
   </head>
   <body>
-    <div class="topNavBar">
-      <img src="#" alt="logo"/>
-      <nav>
-        <ul>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">SKILLS</a></li>
-          <li><a href="#">EXPERIENCE</a></li>
-          <li><a href="#">PRICING</a></li>
-          <li><a href="#">BLOG</a></li>
-          <li><a href="#">CALENDAR</a></li>
-          <li><a href="#">CONTACT</a></li>
-          <li><a href="#">OTHER</a></li>
-          <li><a href="#">ALL DEMOS</a></li>
+    <div class="topNavBar clearfix">
+      <a class="logo" href="#" alt="logo" style="float:left;">
+        <span class="rs">RS</span><span class="card">card</span>
+      </a>
+      <nav style="float:right;">
+        <ul class="clearfix">
+          <li><a href="#">关于</a></li>
+          <li><a href="#">技能</a></li>  
+          <li><a href="#">作品</a></li>
+          <li><a href="#">博客</a></li>
+          <li><a href="#">日历</a></li>
+          <li><a href="#">联系方式</a></li>
+          <li><a href="#">其他</a></li>
         </ul>
       </nav>
     </div>
@@ -65,5 +64,31 @@
       </p>
 
     </main>
+    <section>
+      <h2>技能</h2>
+      <ol>
+        <li>HTML 5 &amp; CSS 3</li>
+        <li>JavaScript</li>
+        <li>jQuery</li>
+        <li>Vue</li>
+        <li>React</li>
+        <li>HTTP</li>
+      </ol>
+    </section>
+    <section>
+      <h2>作品集</h2>
+      <nav>
+        <ol>
+          <li>所有</li>
+          <li>框架</li>
+          <li>原生 JS &apm; CSS</li>
+        </ol>
+      </nav>
+      <div class="jobs">
+        <div class="big"></div>
+        <div class="small"></div>
+        <div class="small"></div>
+      </div>
+    </section>
   </body>
 </html>
