--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html> 
   <head>
     <title>王童孟的个人简历</title>
@@ -15,7 +15,7 @@
   </head>
   <body>
      
-    <div class="topNavBar ">
+    <div class="topNavBar">
       <div class="topNavBar-inner clearfix">
           <a class="logo" href="#" alt="logo" style="float:left;">
               <span class="rs">RS</span><span class="card">card</span>
@@ -91,40 +91,93 @@
               </footer>
         </div>
        
+      <p class="downloadResume-wrapper">
+        <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
 
-      <a class="button" href="#">下载 PDF 简历</a>
-
-      <p>
-        王童孟。<br>
-        技能：前端开发
       </p>
 
+      <p class="selfIntroduction">
+        王童孟，前段工程师。<br>
+        技能：前端开发。
+      </p>
     </main>
-    <section>
+    <section class="skills">
       <h2>技能</h2>
-      <ol>
-        <li>HTML 5 &amp; CSS 3</li>
-        <li>JavaScript</li>
-        <li>jQuery</li>
-        <li>Vue</li>
-        <li>React</li>
-        <li>HTTP</li>
+      <ol class="clearfix">
+        <li>
+          <h3>HTML 5 &amp; CSS 3</h3>
+          <div class="progressBar">
+            <div class="progress"></div>
+          </div>
+        </li>
+        <li>
+            <h3>JavaScript</h3>
+            <div class="progressBar">
+              <div class="progress"></div>
+            </div>
+        </li>
+        <li>
+            <h3>jQuery</h3>
+            <div class="progressBar">
+              <div class="progress"></div>
+            </div>
+        </li>
+        <li>
+            <h3>Vue.js</h3>
+            <div class="progressBar">
+              <div class="progress"></div>
+            </div>
+        </li>
+        <li>
+            <h3>React.js</h3>
+            <div class="progressBar">
+              <div class="progress"></div>
+            </div>
+        </li>
+        <li>
+            <h3>Node.js</h3>
+            <div class="progressBar">
+              <div class="progress"></div>
+            </div>
+        </li>
       </ol>
     </section>
-    <section>
+    <section class="portfolio">
       <h2>作品集</h2>
       <nav>
-        <ol>
-          <li>所有</li>
-          <li>框架</li>
-          <li>原生 JS &apm; CSS</li>
+        <ol class="clearfix">
+          <li id="portfolioAll">所有</li>
+          <li id="portfolioFramework">框架</li>
+          <li id="portfolioVallina">原生 JS &amp;CSS</li>
         </ol>
+        <div id="portfolioBar" class="bar state-1">
+          <div class="bar-inner">
+
+          </div>
+        </div>
       </nav>
-      <div class="jobs">
-        <div class="big"></div>
-        <div class="small"></div>
-        <div class="small"></div>
+      <div class="works" style="height: 597px;">
+        <div class="big" style="top: 0; left:0;">
+          <img src="./img/1.jpg" alt="作品1">
+        </div>
+        <div class="small" style="top: 0; left:645px;">
+            <img src="./img/2.jpg" alt="作品2">
+        </div>
+        <div class="small" style="top: 298px; left:645px;">
+            <img src="./img/3.jpg" alt="作品3">
+        </div>
       </div>
     </section>
+    <script>
+      portfolioAll.onclick = function() {
+        portfolioBar.className = 'bar state-1'
+      }
+      portfolioFramework.onclick = function() {
+        portfolioBar.className = 'bar state-2'
+      }
+      portfolioVallina.onclick = function() {
+        portfolioBar.className = 'bar state-3'
+      }
+    </script>
   </body>
 </html>
