--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </p>
 
       <p class="selfIntroduction">
-        王童孟，前段工程师。<br>
+        王童孟，前端工程师。<br>
         技能：前端开发。
       </p>
     </main>
