修改进度条

--- a/index.html
+++ b/index.html
@@ -107,37 +107,37 @@
         <li>
           <h3>HTML 5 &amp; CSS 3</h3>
           <div class="progressBar">
-            <div class="progress"></div>
+            <div class="progress" style="width: 10%;"></div>
           </div>
         </li>
         <li>
             <h3>JavaScript</h3>
             <div class="progressBar">
-              <div class="progress"></div>
+              <div class="progress" style="width: 20%"></div>
             </div>
         </li>
         <li>
             <h3>jQuery</h3>
             <div class="progressBar">
-              <div class="progress"></div>
+              <div class="progress" style="width: 30%"></div>
             </div>
         </li>
         <li>
             <h3>Vue.js</h3>
             <div class="progressBar">
-              <div class="progress"></div>
+              <div class="progress" style="width: 40%"></div>
             </div>
         </li>
         <li>
             <h3>React.js</h3>
             <div class="progressBar">
-              <div class="progress"></div>
+              <div class="progress" style="width: 50%"></div>
             </div>
         </li>
         <li>
             <h3>Node.js</h3>
             <div class="progressBar">
-              <div class="progress"></div>
+              <div class="progress" style="width: 60%"></div>
             </div>
         </li>
       </ol>
