--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
     <title>王童孟的个人简历</title>
-    <link rel="stylesheet" href="./a.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="loading.css">
     <script src="//at.alicdn.com/t/font_587178_arn742q6rxa5g66r.js"></script>
     <style type="text/css">
         .icon {
@@ -12,10 +13,30 @@
             fill: currentColor;
             overflow: hidden;
         }
+
+        .site-welcome {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #888;
+            z-index: 1;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .site-welcome.active {
+            display: flex;
+        }
+
     </style>
 </head>
 <body>
-
+<div id="siteWelcome" class="site-welcome active">
+    <div class="loading"></div>
+</div>
 <div class="topNavBar">
     <div class="topNavBar-inner clearfix">
         <a class="logo" href="#" alt="logo" style="float:left;">
@@ -169,6 +190,9 @@
         </div>
     </div>
 </section>
+<script>
+    siteWelcome.classList.remove('active')
+</script>
 <script>
     portfolioAll.onclick = function () {
         portfolioBar.className = 'bar state-1'
