--- a/index.html
+++ b/index.html
@@ -191,7 +191,10 @@
     </div>
 </section>
 <script>
-    siteWelcome.classList.remove('active')
+    setTimeout(function () {
+        siteWelcome.classList.remove('active')
+    }, 1000)
+
 </script>
 <script>
     portfolioAll.onclick = function () {
