--- a/index.html
+++ b/index.html
@@ -37,17 +37,31 @@
 <div id="siteWelcome" class="site-welcome active">
     <div class="loading"></div>
 </div>
-<div class="topNavBar">
+<div id="topNavBar" class="topNavBar">
     <div class="topNavBar-inner clearfix">
         <a class="logo" href="#" alt="logo" style="float:left;">
             <span class="rs">RS</span><span class="card">card</span>
         </a>
-        <nav style="float:right;">
+        <nav class="menu" style="float:right;">
             <ul class="clearfix">
-                <li><a href="#">关于</a></li>
-                <li><a href="#">技能</a></li>
-                <li><a href="#">作品</a></li>
-                <li><a href="#">博客</a></li>
+                <li><a href="#siteAbout">关于</a></li>
+                <li><a href="#siteSkills">技能</a></li>
+                <li>
+                    <a href="#siteWorks">作品</a>
+                    <ul class="submenu">
+                        <li>作品1</li>
+                        <li>作品2</li>
+                        <li>作品3</li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">博客</a>
+                    <ul class="submenu">
+                        <li>博客1</li>
+                        <li>博客2</li>
+                        <li>博客3</li>
+                    </ul>
+                </li>
                 <li><a href="#">日历</a></li>
                 <li><a href="#">联系方式</a></li>
                 <li><a href="#">其他</a></li>
@@ -60,7 +74,7 @@
     <div class="mask"></div>
 </div>
 <main>
-    <div class="userCard">
+    <div id="siteAbout" class="userCard">
         <div class="pictureAndText clearfix">
             <div class="picture">
                 <img src="./img/avatar.jpg" width=299 height=347 alt="头像">
@@ -123,7 +137,7 @@
         技能：前端开发。
     </p>
 </main>
-<section class="skills">
+<section id="siteSkills" class="skills">
     <h2>技能</h2>
     <ol class="clearfix">
         <li>
@@ -164,7 +178,7 @@
         </li>
     </ol>
 </section>
-<section class="portfolio">
+<section class="portfolio" id="siteWorks">
     <h2>作品集</h2>
     <nav>
         <ol class="clearfix">
@@ -194,9 +208,6 @@
     setTimeout(function () {
         siteWelcome.classList.remove('active')
     }, 1000)
-
-</script>
-<script>
     portfolioAll.onclick = function () {
         portfolioBar.className = 'bar state-1'
     }
@@ -205,6 +216,36 @@
     }
     portfolioVallina.onclick = function () {
         portfolioBar.className = 'bar state-3'
+    }
+    window.onscroll = function (xxxxx) {
+        if(window.scrollY > 0) {
+            topNavBar.classList.add('sticky')
+        } else {
+            topNavBar.classList.remove('sticky')
+        }
+    }
+    let liTags = document.querySelectorAll('nav.menu > ul > li')
+    for(let i=0; i < liTags.length; i++) {
+        liTags[i].onmouseenter = function (x) {
+            let li = x.currentTarget.classList.add('active')
+        }
+        liTags[i].onmouseleave = function (x) {
+            let li = x.currentTarget.classList.remove('active')
+        }
+    }
+
+    let aTags = document.querySelectorAll('nav.menu > ul > li > a')
+    for(let i=0; i<aTags.length; i++) {
+        aTags[i].onclick = function(x) {
+            x.preventDefault()
+            let a = x.currentTarget
+            var href = a.getAttribute('href') // '#siteAbout'
+            let element = document.querySelector(href)
+            let top = element.offsetTop
+            window.scrollTo(0, top - 80)
+
+        }
+
     }
 </script>
 </body>
