--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="loading.css">
     <script src="//at.alicdn.com/t/font_587178_arn742q6rxa5g66r.js"></script>
+
     <style type="text/css">
         .icon {
             width: 1em;
@@ -34,8 +35,8 @@
     </style>
 </head>
 <body>
-<div id="siteWelcome" class="site-welcome active">
-    <div class="loading"></div>
+<!--<div id="siteWelcome" class="site-welcome active">-->
+    <!--<div class="loading"></div>-->
 </div>
 <div id="topNavBar" class="topNavBar">
     <div class="topNavBar-inner clearfix">
@@ -74,7 +75,7 @@
     <div class="mask"></div>
 </div>
 <main>
-    <div id="siteAbout" class="userCard">
+    <div data-x id="siteAbout" class="userCard">
         <div class="pictureAndText clearfix">
             <div class="picture">
                 <img src="./img/avatar.jpg" width=299 height=347 alt="头像">
@@ -137,7 +138,7 @@
         技能：前端开发。
     </p>
 </main>
-<section id="siteSkills" class="skills">
+<section data-x id="siteSkills" class="skills">
     <h2>技能</h2>
     <ol class="clearfix">
         <li>
@@ -178,7 +179,7 @@
         </li>
     </ol>
 </section>
-<section class="portfolio" id="siteWorks">
+<section data-x class="portfolio" id="siteWorks">
     <h2>作品集</h2>
     <nav>
         <ol class="clearfix">
@@ -204,10 +205,10 @@
         </div>
     </div>
 </section>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 <script>
-    setTimeout(function () {
-        siteWelcome.classList.remove('active')
-    }, 1000)
+        // siteWelcome.classList.remove('active')
+
     portfolioAll.onclick = function () {
         portfolioBar.className = 'bar state-1'
     }
@@ -217,14 +218,51 @@
     portfolioVallina.onclick = function () {
         portfolioBar.className = 'bar state-3'
     }
-    window.onscroll = function (xxxxx) {
+    // 添加 offset 类
+    let specialTags = document.querySelectorAll('[data-x]')  // 取到含有data-x属性的元素
+    for(let i=0;i<specialTags.length; i++) {
+        specialTags[i].classList.add('offset')
+    }
+
+    setTimeout(function () {
+        findClosest()
+    }, 100)
+    window.onscroll = function (x) {
         if(window.scrollY > 0) {
             topNavBar.classList.add('sticky')
         } else {
             topNavBar.classList.remove('sticky')
         }
+        findClosest()
+    }
+    function findClosest() {
+        let specialTags = document.querySelectorAll('[data-x]')  // 取到含有data-x属性的元素
+        let minIndex = 0
+        for(let i=1;i<specialTags.length; i++) {
+            if(Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
+                minIndex = i
+            }
+        }
+        // minIndex 就是离窗口顶部最近的元素
+        specialTags[minIndex].classList.remove('offset')
+        let id = specialTags[minIndex].id
+        console.log(id)
+        let a = document.querySelector('a[href="#' + id + '"]')
+        let li = a.parentNode
+        let brotherAndMe = li.parentNode.children
+        for(let i=0; i<brotherAndMe.length; i++) {
+            brotherAndMe[i].classList.remove('highlight')
+        }
+        li.classList.add('highlight')
     }
     let liTags = document.querySelectorAll('nav.menu > ul > li')
+    function animate(time) {
+        requestAnimationFrame(animate)
+        TWEEN.update(time)
+    }
+
+    requestAnimationFrame(animate)
+
     for(let i=0; i < liTags.length; i++) {
         liTags[i].onmouseenter = function (x) {
             let li = x.currentTarget.classList.add('active')
@@ -242,10 +280,22 @@
             var href = a.getAttribute('href') // '#siteAbout'
             let element = document.querySelector(href)
             let top = element.offsetTop
-            window.scrollTo(0, top - 80)
 
+            let currentTop = window.scrollY
+            let targetTop = top - 80
+            let s = targetTop - currentTop  // 路程
+            var coords = {y: currentTop}   // 起始位置
+            var t = Math.abs((s / 100)*300)  // 时间
+            if (t>500) {t = 500}
+            var tween = new TWEEN.Tween(coords)   // 起始位置
+                .to({y: targetTop},t)    // 结束位置 和 时间
+                .easing(TWEEN.Easing.Quadratic.InOut)
+                // coords.y 已经变了
+                .onUpdate(function () {
+                    window.scrollTo(0,coords.y) // 如何更新界面
+                })
+                .start() // 开始缓动
         }
-
     }
 </script>
 </body>
