--- a/index.html
+++ b/index.html
@@ -3,38 +3,11 @@
 <head>
     <title>王童孟的个人简历</title>
 
-    <link rel="stylesheet" href="loading.css">
+    <!--<link rel="stylesheet" href="loading.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/css/swiper.min.css">
     <link rel="stylesheet" href="main.css">
     <script src="//at.alicdn.com/t/font_587178_arn742q6rxa5g66r.js"></script>
 
-    <style type="text/css">
-        .icon {
-            width: 1em;
-            height: 1em;
-            vertical-align: -0.15em;
-            fill: currentColor;
-            overflow: hidden;
-        }
-
-        .site-welcome {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: #888;
-            z-index: 1;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .site-welcome.active {
-            display: flex;
-        }
-
-    </style>
 </head>
 <body>
 <!--<div id="siteWelcome" class="site-welcome active">-->
