--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
     <title>王童孟的个人简历</title>
-
     <!--<link rel="stylesheet" href="loading.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/css/swiper.min.css">
     <link rel="stylesheet" href="main.css">
-    <script src="//at.alicdn.com/t/font_587178_arn742q6rxa5g66r.js"></script>
+    <script src="//at.alicdn.com/t/font_587178_siagnqhq4vzbmx6r.js"></script>
 
 </head>
 <body>
@@ -21,26 +20,26 @@
         <nav class="menu">
             <ul class="clearfix">
                 <li><a href="#siteAbout">关于</a></li>
-                <li><a href="#siteSkills">技能</a></li>
+                <li><a href="#siteWorks">作品</a></li>
                 <li>
-                    <a href="#siteWorks">作品</a>
-                    <ul class="submenu">
-                        <li>作品1</li>
-                        <li>作品2</li>
-                        <li>作品3</li>
-                    </ul>
+                    <a href="#siteSkills">技能</a>
+                    <!--<ul class="submenu">-->
+                        <!--<li>作品1</li>-->
+                        <!--<li>作品2</li>-->
+                        <!--<li>作品3</li>-->
+                    <!--</ul>-->
                 </li>
                 <li>
-                    <a href="#">博客</a>
-                    <ul class="submenu">
-                        <li>博客1</li>
-                        <li>博客2</li>
-                        <li>博客3</li>
-                    </ul>
+                    <a href="https://littlebirdflying.github.io/" target="_blank">博客</a>
+                    <!--<ul class="submenu">-->
+                        <!--<li>博客1</li>-->
+                        <!--<li>博客2</li>-->
+                        <!--<li>博客3</li>-->
+                    <!--</ul>-->
                 </li>
-                <li><a href="#">日历</a></li>
-                <li><a href="#">联系方式</a></li>
-                <li><a href="#">其他</a></li>
+                <!--<li><a href="#">日历</a></li>-->
+                <!--<li><a href="#">联系方式</a></li>-->
+                <!--<li><a href="#">其他</a></li>-->
             </ul>
         </nav>
     </div>
@@ -50,11 +49,10 @@
     <div class="mask"></div>
 </div>
 <main>
-
     <div data-x id="siteAbout" class="userCard">
         <div class="pictureAndText clearfix">
             <div class="picture">
-                <img src="./img/avatar.jpg" width=299 height=347 alt="头像">
+                <img src="./img/resume.jpg" width=272 height=400 alt="头像">
             </div>
             <div class="text">
                   <span class="welcome">你好，我是一名前端工程师
@@ -63,161 +61,259 @@
                 <div >
                     <h1>王童孟</h1>
                     <p>
-                        前端工程师，熟悉 HTML5/CSS3/JavaScript/jQuery/Vue
+                        男，26岁，硕士，西北农林科技大学
                     </p>
                 </div>
                 <hr>
                 <dl>
-                    <dt>年龄</dt>
-                    <dd>26</dd>
                     <dt>所在城市</dt>
                     <dd>北京</dd>
-                    <dt>邮箱</dt>
-                    <dd>tongmengwang@163.com</dd>
-                    <dt>手机</dt>
+                    <dt>手机号码</dt>
                     <dd>18519722650</dd>
+                    <dt>微信号码</dt>
+                    <dd>little-bird-flying</dd>
+                    <dt>网易邮箱</dt>
+                    <dd>tongmengwang@163.com</dd>
+                    <dt>QQ 邮箱</dt>
+                    <dd>767610876@qq.com</dd>
                 </dl>
             </div>
         </div>
         <footer class="media">
-            <a href="#">
+            <a href="https://github.com/littlebirdflying" target="_blank" title="github">
                 <svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-github"></use>
                 </svg>
             </a>
-            <a href="#">
+            <a href="https://www.jianshu.com/u/1bae286ad76b" target="_blank" title="简书">
                 <svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-CN_jianshu"></use>
                 </svg>
             </a>
-            <a href="#">
+            <a href="https://blog.csdn.net/grapelove01" target="_blank" title="csdn">
                 <svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-twitter"></use>
+                    <use xlink:href="#icon-CN_csdnnet"></use>
                 </svg>
             </a>
-            <a href="#">
+            <a href="https://www.zhihu.com/people/meng-meng-55-41/columns" target="_blank" title="知乎">
                 <svg class="icon" aria-hidden="true">
                     <use xlink:href="#icon-zhihu"></use>
                 </svg>
             </a>
-            <a href="#">
-                <svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-weibo"></use>
-                </svg>
-            </a>
         </footer>
+        <p class="downloadResume-wrapper">
+            <a class="downloadResume" href="./resume.pdf" target="_blank" download>点击下载 pdf 简历</a>
+        </p>
     </div>
-
-    <p class="downloadResume-wrapper">
-        <a class="downloadResume" href="./resume.pdf" target="_blank" download>下载 PDF 简历</a>
-
-    </p>
-
-    <p class="selfIntroduction">
-        王童孟，前端工程师。<br>
-        技能：前端开发。
-    </p>
+    <!--<p class="selfIntroduction">-->
+    <!--</p>-->
 </main>
-<section data-x id="siteSkills" class="skills">
-    <h2>技能</h2>
-    <ol class="clearfix">
-        <li>
-            <h3>HTML 5 &amp; CSS 3</h3>
-            <p>文字文字文字文字文字文字文字文字文字</p>
-        </li>
-        <li>
-            <h3>JavaScript</h3>
-            <p>文字文字文字文字文字文字文字文字文字</p>
-        </li>
-        <li>
-            <h3>jQuery</h3>
-            <p>文字文字文字文字文字文字文字文字文字</p>
-        </li>
-        <li>
-            <h3>Vue.js</h3>
-            <p>文字文字文字文字文字文字文字文字文字</p>
-        </li>
-        <li>
-            <h3>React.js</h3>
-            <p>文字文字文字文字文字文字文字文字文字</p>
-        </li>
-        <li>
-            <h3>Node.js</h3>
-            <p>文字文字文字文字文字文字文字文字文字</p>
-        </li>
-    </ol>
-</section>
-<section data-x class="portfolio" id="siteWorks">
-    <h2>作品集</h2>
-    <!--变成轮播-->
-    <!--这就是view, 用户看得见的东西-->
-    <!-- Slider main container -->
-    <div class="works">
-        <ol>
-            <li>
-                <img src="./img/works/nav-page.jpg">
-                <p>关键字</p>
-                <div><a href="#">预览链接</a><a href="#">源码链接</a></div>
-                <p>描述</p>
-            </li>
-            <li>
-                <img src="./img/works/canvas.jpg">
-                <p>关键字</p>
-                <div><a href="#">预览链接</a><a href="#">源码链接</a></div>
-                <p>描述</p>
-            </li>
-            <li>
-                <img src="./img/works/apple-style-slides.jpg" >
-                <p>关键字</p>
-                <div><a href="#">预览链接</a><a href="#">源码链接</a></div>
-                <p>描述</p>
-            </li>
-            <li>
-                <img src="./img/works/nav-page.jpg">
-                <p>关键字</p>
-                <div><a href="#">预览链接</a><a href="#">源码链接</a></div>
-                <p>描述</p>
-            </li>
-            <li>
-                <img src="./img/works/canvas.jpg">
-                <p>关键字</p>
-                <div><a href="#">预览链接</a><a href="#">源码链接</a></div>
-                <p>描述</p>
-            </li>
-            <li>
-                <img src="./img/works/apple-style-slides.jpg" >
-                <p>关键字</p>
-                <div><a href="#">预览链接</a><a href="#">源码链接</a></div>
-                <p>描述</p>
-            </li>
-        </ol>
+<section class="myPortfolio" data-x id="siteWorks">
+    <div class="boundary">
+        <header class="section_header">
+            <h2 class="section_header_title">作品集</h2>
+        </header>
+        <div class="section_body">
+            <section class="project clearfix">
+                <div class="project_intro">
+                    <header class="project_intro_header clearfix">
+                        <h4 class="project_intro_header_title">导航栏<span> - Tiny navigation page</span></h4>
+                        <ul class="tech-tag-list">
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
+                            <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
+
+                        </ul>
+                    </header>
+                    <div class="project_intro_header_content">
+                        <p>
+                            基于原生 JavaScript ，实现自定义键盘导航栏工具，主要功能有：
+                        </p>
+                        <ul class="list">
+                            <li>为键盘上的 26 个字母绑定了导航网址，敲击字母即可跳转至相应导航页面</li>
+                            <li>可以自定义每个键绑定的导航网址</li>
+
+                        </ul>
+                        <p class="project_intro_links">
+                            <a href="https://littlebirdflying.github.io/myBookmarks/index.html" target="_blank">预览地址</a>
+                            <a href="https://github.com/littlebirdflying/myBookmarks" target="_blank">源码地址</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="project_thumb">
+                    <img src="./img/works/nav-page.jpg" alt="导航栏">
+                </div>
+            </section>
+            <section class="project clearfix">
+                <div class="project_intro">
+                    <header class="project_intro_header clearfix">
+                        <h4 class="project_intro_header_title">smart 在线画板<span> - Draw anything your want</span></h4>
+                        <ul class="tech-tag-list">
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
+                        </ul>
+                    </header>
+                    <div class="project_intro_header_content">
+                        <p>
+                            基于原生 JavaScript 与 canvas 实现的在线画板，主要功能有：
+                        </p>
+                        <ul class="list">
+                            <li>实现任意选择颜色、画笔类型以及擦除等绘画功能</li>
+                            <li>实现在线画板的本地保存功能</li>
+                            <li>支持手机在线绘画功能</li>
+                        </ul>
+                        <p class="project_intro_links">
+
+                            <a href="https://littlebirdflying.github.io/canvas-demo/index.html" target="_blank">预览地址</a>
+                            <a href="https://github.com/littlebirdflying/canvas-demo" target="_blank">源码地址</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="project_thumb">
+                    <img src="./img/works/canvas.jpg" alt="canvas画板">
+                </div>
+            </section>
+            <section class="project clearfix">
+                <div class="project_intro">
+                    <header class="project_intro_header clearfix">
+                        <h4 class="project_intro_header_title">小黄人<span> - code a Minion for you</span></h4>
+                        <ul class="tech-tag-list">
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>
+
+                        </ul>
+                    </header>
+                    <div class="project_intro_header_content">
+                        <p>
+                            基于 jQuery，利用动态向 style 标签添加样式以及 pre 标签添加文本，模拟css绘制小黄人的过程，主要功能有：
+                        </p>
+                        <ul class="list">
+                            <li>同时显示style代码和绘画过程</li>
+                            <li>增加播放代码速度调节按钮</li>
+                            <li>适配手机端</li>
+                        </ul>
+                        <p class="project_intro_links">
+                            <a href="https://littlebirdflying.github.io/make-a-Minion/index.html" target="_blank">预览地址</a>
+                            <a href="https://github.com/littlebirdflying/make-a-Minion" target="_blank">源码地址</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="project_thumb">
+                    <img src="./img/works/Minion.jpg" alt="苹果风格轮播">
+                </div>
+            </section>
+            <section class="project clearfix">
+                <div class="project_intro">
+                    <header class="project_intro_header clearfix">
+                        <h4 class="project_intro_header_title">会动的简历<span> - make your resume active</span></h4>
+                        <ul class="tech-tag-list">
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
+                            <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
+
+                        </ul>
+                    </header>
+                    <div class="project_intro_header_content">
+                        <p>
+                            基于原生 JavaScript 和 ，利用动态向 style 标签添加样式以及 pre 标签添加文本，利用css3过渡特效，使简历生动起来。
+                        </p>
+                        <!--<ul class="list">-->
+                            <!--<li>为键盘上的 26 个字母绑定了导航网址，敲击字母即可跳转至相应导航页面</li>-->
+                            <!--<li>可以自定义每个键绑定的导航网址</li>-->
+
+                        <!--</ul>-->
+                        <p class="project_intro_links">
+                            <a href="https://littlebirdflying.github.io/myBookmarks/index.html" target="_blank">预览地址</a>
+                            <a href="https://github.com/littlebirdflying/myBookmarks" target="_blank">源码地址</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="project_thumb">
+                    <img src="./img/works/animation-resume.jpg" alt="导航栏">
+                </div>
+            </section>
+
+        </div>
     </div>
+</section>
+<section data-x id="siteSkills" class="skills">
+        <h2>技能</h2>
+    <section class="tech-stack">
+        <h3>前端</h3>
+        <ul>
+            <li>
+                <div class="circle"></div>
+                <h4>HTML5 & CSS3</h4>
+                <p>能独立制作精美页面，掌握 CSS 动画、过渡效果、响应式等常用技术。</p>
+            </li>
+            <li>
+                <div class="circle"></div>
+                <h4>移动端页面</h4>
+                <p>会使用 REM、 vm/vh、FastClick 等技术制作适配手机设备的页面。</p>
+            </li>
+            <li>
+                <div class="circle"></div>
+                <h4>jQuery</h4>
+                <p>熟悉 jQuery 的常用 API，能使用 jQuery 制作网站、轮播、Tab组件等。</p>
+            </li>
+            <li>
+                <div class="circle"></div>
+                <h4>Vue</h4>
+                <p>熟悉 Vue 常用功能，如组件、Vue-Router、双向绑定等。</p>
+            </li>
+            <li>
+                <div class="circle"></div>
+                <h4>前端框架</h4>
+                <p>	理解 MVC、MVVM 等思想，可以熟练使用相关的库，如 Vue、React。</p>
+            </li>
+            <li>
+                <div class="circle"></div>
+                <h4>小程序制作</h4>
+                <p>可以独立进行小程序开发，熟悉AAA、BBB、CCC  API或组件的使用。</p>
+            </li>
+        </ul>
+    </section>
+    <section class="tech-stack">
+        <h3>后端</h3>
+        <ul>
+            <li>
+                <div class="circle"></div>
+                <h4>Node.js</h4>
+                <p>了解 Node.js 的开发，使用 MongoDB 和 Redis 做数据存储和缓存，使用 pm2 和 Docker 部署。</p>
+            </li>
+        </ul>
+    </section>
 
 </section>
-<section class="message">
-    <h2>留言</h2>
-    <ol id="messageList">
-    </ol>
-    <form id="postMessageForm" style="width:700px; margin:50px auto;">
-        <label for="">姓名</label>
-        <input type="text" name="name">
-        <label for="">内容</label>
-        <input type="text" name="content">
-        <input type="submit" value="提交">
-    </form>
-</section>
+<!--<section class="message">-->
+    <!--<h2>留言</h2>-->
+    <!--<ol id="messageList">-->
+    <!--</ol>-->
+    <!--<form id="postMessageForm" style="width:700px; margin:50px auto;">-->
+        <!--<label for="">姓名</label>-->
+        <!--<input type="text" name="name">-->
+        <!--<label for="">内容</label>-->
+        <!--<input type="text" name="content">-->
+        <!--<input type="submit" value="提交">-->
+    <!--</form>-->
+<!--</section>-->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>-->
 <script src="//cdn1.lncld.net/static/js/3.6.5/av-min.js"></script>
 <script src="./js/base/View.js"></script>
 <script src="./js/base/Model.js"></script>
 <script src="./js/base/Controller.js"></script>
 <!-- 模块化 -->
 <!--<script src="./js/init-swiper.js"></script>-->
-<script src="./js/auto-slide-up.js"></script>
+<!--<script src="./js/auto-slide-up.js"></script>-->
 <script src="./js/sticky-topbar.js"></script>
 <script src="./js/smoothly-navigation.js"></script>
-<script src="./js/message.js"></script>
+<!--<script src="./js/message.js"></script>-->
 </body>
 </html>
