--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <title>王童孟的个人简历</title>
     <!--<link rel="stylesheet" href="loading.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/css/swiper.min.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/print.css" media="print">
-    <script src="//at.alicdn.com/t/font_587178_siagnqhq4vzbmx6r.js"></script>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/print.css" media="print">
 </head>
 <body>
 <!--<div id="siteWelcome" class="site-welcome active">-->
@@ -335,7 +334,7 @@
         <!--<input type="submit" value="提交">-->
     <!--</form>-->
 <!--</section>-->
-
+<script src="//at.alicdn.com/t/font_587178_siagnqhq4vzbmx6r.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>-->
 <script src="//cdn1.lncld.net/static/js/3.6.5/av-min.js"></script>
