给简历添加项目内容

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                 <!--<li><a href="#">日历</a></li>-->
                 <!--<li><a href="#">联系方式</a></li>-->
                 <!--<li><a href="#">其他</a></li>-->
+                <li>
+                    <a href="https://github.com/littlebirdflying" target="_blank">GitHub</a>
+                </li>
             </ul>
         </nav>
     </div>
@@ -85,9 +88,9 @@
                     <use xlink:href="#icon-github"></use>
                 </svg>
             </a>
-            <a href="https://www.jianshu.com/u/1bae286ad76b" target="_blank" title="简书">
+            <a href="https://www.zhihu.com/people/meng-meng-55-41/columns" target="_blank" title="知乎">
                 <svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-CN_jianshu"></use>
+                    <use xlink:href="#icon-zhihu"></use>
                 </svg>
             </a>
             <a href="https://blog.csdn.net/grapelove01" target="_blank" title="csdn">
@@ -95,9 +98,9 @@
                     <use xlink:href="#icon-CN_csdnnet"></use>
                 </svg>
             </a>
-            <a href="https://www.zhihu.com/people/meng-meng-55-41/columns" target="_blank" title="知乎">
+            <a href="https://www.jianshu.com/u/1bae286ad76b" target="_blank" title="简书">
                 <svg class="icon" aria-hidden="true">
-                    <use xlink:href="#icon-zhihu"></use>
+                    <use xlink:href="#icon-CN_jianshu"></use>
                 </svg>
             </a>
         </footer>
@@ -117,12 +120,48 @@
             <section class="project clearfix">
                 <div class="project_intro">
                     <header class="project_intro_header clearfix">
+                        <h4 class="project_intro_header_title">多人共享博客<span> - a Multi-user blog</span></h4>
+                        <ul class="tech-tag-list">
+                            <li class="tech-tag-list_item tech-tag-list_item-vue-cli">vue-cli</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-vue">vue2</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-axios">axios</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-vue-router">vue-router</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-vuex">vuex</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-es6">es6</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-npm">npm</li>
+                            <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
+
+                        </ul>
+                    </header>
+                    <div class="project_intro_header_content">
+                        <p>
+                            基于vue技术栈，做一款多人共享博客的单页应用，实现以下功能：
+                        </p>
+                        <ul class="list">
+                            <li>用户的登录、注册、注销功能</li>
+                            <li>首页多人博客列表展示与用户博客列表展示</li>
+                            <li>个人博客管理:创建、编辑、删除与发布</li>
+                        </ul>
+                        <p class="project_intro_links">
+                            <a href="https://littlebirdflying.github.io/multi-user-blog/dist/#/" target="_blank">预览地址</a>
+                            <a href="https://github.com/littlebirdflying/multi-user-blog" target="_blank">源码地址</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="project_thumb notPrint">
+                    <img src="./img/works/multi-user-blog.jpg" alt="导航栏">
+                </div>
+            </section>
+            <section class="project clearfix">
+                <div class="project_intro">
+                    <header class="project_intro_header clearfix">
                         <h4 class="project_intro_header_title">在线简历编辑器<span> - a shareable resume-editor online</span></h4>
                         <ul class="tech-tag-list">
-                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
                             <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
                             <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
                             <li class="tech-tag-list_item tech-tag-list_item-vue">Vue</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-lean-cloud">LeanCloud</li>
                             <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
 
                         </ul>
@@ -132,9 +171,9 @@
                             基于vue技术栈，以LeanCloud为数据库，完成一个可分享的在线简历编辑器，实现以下功能：
                         </p>
                         <ul class="list">
-                        <li>以LeanCloud为数据库，完成登录、注册、注销功能</li>
-                        <li>实现信息区、技能区、项目区的可编辑功能</li>
-                        <li>实现保存、分享、打印、换肤功能</li>
+                        <li>用户的登录、注册、注销功能</li>
+                        <li>信息区、技能区、项目区的可编辑功能</li>
+                        <li>编辑器的保存、分享、打印、换肤功能</li>
                         </ul>
                         <p class="project_intro_links">
                             <a href="https://littlebirdflying.github.io/my-vue-resume-20180613/src/index.html#/" target="_blank">预览地址</a>
@@ -151,8 +190,8 @@
                     <header class="project_intro_header clearfix">
                         <h4 class="project_intro_header_title">导航栏<span> - Tiny navigation page</span></h4>
                         <ul class="tech-tag-list">
-                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
-                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
                             <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
                             <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
 
@@ -182,8 +221,8 @@
                     <header class="project_intro_header clearfix">
                         <h4 class="project_intro_header_title">smart 在线画板<span> - Draw anything your want</span></h4>
                         <ul class="tech-tag-list">
-                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
-                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
                             <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
                         </ul>
                     </header>
@@ -212,9 +251,9 @@
                     <header class="project_intro_header clearfix">
                         <h4 class="project_intro_header_title">小黄人<span> - code a Minion for you</span></h4>
                         <ul class="tech-tag-list">
-                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
                             <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
-                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
                             <li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>
 
                         </ul>
@@ -243,7 +282,7 @@
                     <header class="project_intro_header clearfix">
                         <h4 class="project_intro_header_title">会动的简历<span> - make your resume active</span></h4>
                         <ul class="tech-tag-list">
-                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
                             <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
                             <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
                             <!--<li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>-->
@@ -295,8 +334,9 @@
             </li>
             <li>
                 <div class="circle"></div>
-                <h4>Vue</h4>
-                <p>熟悉 Vue 常用功能，如组件、Vue-Router、双向绑定等。</p>
+                <h4>Vue.js</h4>
+                <p>能使用 Vue.js 完成需求，了解 Vue.js 的数据双向绑定、数据响应式原理、父子组件间的通信原理，</p>
+                <p>能使用 Vue-Router 制作前端路由；能使用 vuex 进行状态管理。</p>
             </li>
             <li>
                 <div class="circle"></div>
