添加网易云项目

--- a/index.html
+++ b/index.html
@@ -188,6 +188,38 @@
             <section class="project clearfix">
                 <div class="project_intro">
                     <header class="project_intro_header clearfix">
+                        <h4 class="project_intro_header_title">网易云播放器<span> - a Netease cloud player</span></h4>
+                        <ul class="tech-tag-list">
+                            <li class="tech-tag-list_item tech-tag-list_item-jQuery">jQuery</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-css">CSS 3</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-javascript">JavaScript</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-lean-cloud">LeanCloud</li>
+                            <li class="tech-tag-list_item tech-tag-list_item-qiniu">QiNiu</li>
+                        </ul>
+                    </header>
+                    <div class="project_intro_header_content">
+                        <p>
+                            基于jQuery技术栈，以LeanCloud和QiNiu为数据库，完成一个移动端网易云播放器，实现以下功能：
+                        </p>
+                        <ul class="list">
+                            <li>展示歌曲列表、展示热歌榜歌曲、搜索歌曲。</li>
+                            <li>歌曲播放、暂停、歌词展示。</li>
+                            <li>搭建后台管理系统，实现歌曲新建、添加、编辑、删除。</li>
+                        </ul>
+                        <p class="project_intro_links">
+                            <a href="https://littlebirdflying.github.io/163-music-201805/src/index.html" target="_blank">预览地址</a>
+                            <a href="https://github.com/littlebirdflying/163-music-201805" target="_blank">源码地址</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="project_thumb notPrint">
+                    <img src="./img/works/resume-editor.jpg" alt="导航栏">
+                </div>
+            </section>
+            <section class="project clearfix">
+                <div class="project_intro">
+                    <header class="project_intro_header clearfix">
                         <h4 class="project_intro_header_title">导航栏<span> - Tiny navigation page</span></h4>
                         <ul class="tech-tag-list">
                             <li class="tech-tag-list_item tech-tag-list_item-html">HTML 5</li>
