--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     </div>
                 </div>
                 <div class="project_thumb notPrint">
-                    <img src="./img/works/resume-editor.jpg" alt="导航栏">
+                    <img src="./img/works/163-music.jpg" alt="导航栏">
                 </div>
             </section>
             <section class="project clearfix">
